--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html"
